helptext fixes, formatting (fixes TDAR-2447)
- breaking out contextual help javascript into separate file & 'module'
- fixing vertical alignment on several divs; caused by helptext applying to hidden, invisible sections (my fault from when i first started converting stuff to bootstrap).   This was screwing up the offset and making some helptext impossible to reach.
- new styling for the helptext.
- minor verbiage tweaks (grammar errors, updated access rights options)

--- a/src/main/webapp/css/tdar-bootstrap.css
+++ b/src/main/webapp/css/tdar-bootstrap.css
@@ -1282,3 +1282,32 @@ p.copyright-notice {
     text-decoration: line-through;
     display: none;
 }
+
+/* contextual help styling - based off of 'downloads' box on view page */
+
+#notice {
+    font-family: 'ff-tisa-web-pro', serif;
+    background-color: #f0eeeb;
+}
+#notice h2 {
+    font-size: 15px;
+}
+
+#notice > h2 {
+    background-color: #7a1501;
+    color: white;
+    padding: 10px;
+    line-height: inherit;
+}
+
+#noticecontent {
+    color: #7d7a77;
+    padding: 0 10px 5px 10px;
+}
+
+/* undoing .cols p */
+#noticecontent p {
+    font-size: inherit;
+    font-weight: normal;
+}
+ 
